bundles/roboconf-core/src/test/resources/configurations/valid/commented-component-1.graph
# A simple component
apache {
	alias: Apache;
}