bundles/roboconf-core/src/test/resources/configurations/invalid/component-inexisting-children.graph
VM {
    alias: VM;
    installer: iaas;
    children: A, B, C;
}

A {
    alias: A;
    installer: puppet;
}
